# tiedontiivistys

./: .coveragerc  .gitignore  .pylintrc  README.md  coverage.xml  määrittelydokumentti.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
dokumentaatio/: kayttoohje.md  määrittelydokumentti.md  testausdokumentti.md  toteutusraportti.md
dokumentaatio/viikkoraportit/: Viikko1.md  Viikko2  Viikko3.md  Viikko4.md  Viikko5.md  Viikko6.md
src/: huffman.py  lz78.py  main.py  testiteksti.txt.txt  testiteksti.txt_pakattu-huffman.txt  testiteksti.txt_pakattu-huffman.txt_purettu-huffman.txt  testiteksti.txt_pakattu-lz.txt  testiteksti.txt_pakattu-lz.txt_purettu78
src/tests/: huffman_test.py  lz78_test.py  testaus.txt_pakattu-huffman.txt  tulostus.txt  tulostus.txt_purettu-lz.txt
testattavat/: testi1.txt  testi2.txt  testi3.txt  testi4.txt  testi5.txt
tulosteet/: testi2.txt_pakattu-lz.txt  testi4.txt_pakattu-huffman.txt
