[tool.poetry]
name = "tiedontiivistys"
version = "0.1.0"
description = ""
authors = ["mleikas@helsinki.fi <max.o.leikas@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.0"


[tool.poetry.group.dev.dependencies]
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
